# DocxTemplate

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  install.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
app/: config.py  docxtemplate.py  payraise.py
src/docxtemplate/: docxtemplate.py
templates/: Courriers augmentation 2021-2022.docx  Courriers-augmentation-2021-2022.docx  Data-Example.xlsx
tests/: test_docxtemplate.py
tests/test_data/: Data-Example.xlsx  Letter-template.docx
