[metadata]
name = docxtemplate
description = Simple Word file generator from Excel data and Docx template
version = 0.1
author = Julien Bordet
platforms = osx, win32

[options]
packages =
    docxtemplate
install_requires =
    openpyxl
    python-docx
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[flake8]
exclude = .git
max-line-length=119

[options.extras_require]
testing =
    pytest>=7.0.1
    pytest-cov>=3.0.0
    flake8>=4.0.1
